--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
         <header>
             <img src="WhatsApp Image 2024-04-15 at 10.17.50_c8052e2f.jpg" alt="Akash Kumar" class="profile-image">
             <div class="social-icons">
-                <a href="#" target="_blank"><i class="fab fa-github"></i></a>
-                <a href="#" target="_blank"><i class="fab fa-linkedin"></i></a>
-                <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
+                <a href="https://github.com/codewithpanda28" target="_blank"><i class="fab fa-github"></i></a>
+                <a href="www.linkedin.com/in/codewithpanda" target="_blank"><i class="fab fa-linkedin"></i></a>
+                <a href="https://www.instagram.com/nexcodeui/profilecard/?igsh=MXoydTd4cjF5MnFq" target="_blank"><i class="fab fa-instagram"></i></a>
                 <!-- <a href="#" target="_blank"><i class="fab fa-codepen"></i></a> -->
-                <a href="#" target="_blank"><i class="fas fa-envelope"></i></a>
+                <a href="codewithpanda28@gamil.com" target="_blank"><i class="fas fa-envelope"></i></a>
             </div>
             <h1>Akash Kumar</h1>
             <h2>Frontend Developer</h2>
@@ -152,7 +152,7 @@
         
         <section class="card" id="portfolio">
             <h3>Portfolio</h3>
-            <a href="https://your-portfolio-url.com" target="_blank" rel="noopener noreferrer">View My Portfolio</a>
+            <a href="https://mypast.netlify.app/" rel="noopener noreferrer">View My Portfolio</a>
         </section>
         
         <footer>
